--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_course
+spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_curso
 spring.datasource.username=postgres
 spring.datasource.password=23/Pp/2003
 
@@ -7,5 +7,3 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-jwt.secret=MYJWTSECRET
-jwt.expiration=3600000
